--- a/app/views/bestand/index.html.erb
+++ b/app/views/bestand/index.html.erb
@@ -20,7 +20,7 @@
     <div class="col-md-12 col-sm-12">
       <div class="content p-3">
         <h1 class="mb-0"> BESTAND</h1>
-        <p class="color-primary" id="cars-counter">(0 - <%= Car.count %> VON <%= Car.count %> FAHRZEUGEN)
+        <p class="color-primary" id="cars-counter">(<%= Car.count %> - <%= Car.count %> VON <%= Car.count %> FAHRZEUGEN)
         </p>
         <div class="row">
           <div class="col-lg-9 col-md-12 col-sm-12">
