--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -70,7 +70,7 @@
               </div>
             </div>
           </li>
-          <li class=" nav-item"><a class="nav-link" href="#">Dokumente</a>
+          <li class=" nav-item"><a class="nav-link" href="/auswahlen">Dokumente</a>
             <div class="subdropdonw">
               <div class="menucontent">
                 <ul class="m-0 p-0">
@@ -119,7 +119,6 @@
               </div>
             </div>
           </li>
-          <li class="nav-item"><a class="nav-link" href="#">Anruf-Analyst</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Einstellungen</a>
             <div class="subdropdonw">
               <div class="menucontent">
@@ -150,7 +149,7 @@
           </div>
           <div class="dropdown-menu shadow-sm" aria-labelledby="dropdownMenuButton">
             <a class="dropdown-item" href="#">Kundennr.: 512463</a>
-            <a class="dropdown-item" href="#">Logout</a>
+            <a class="dropdown-item" href="/login">Logout</a>
           </div>
         </div>
         <!-- <div class="user-profile-icon">AA</div> -->
