--- a/app/views/markt_uberblick/index.html.erb
+++ b/app/views/markt_uberblick/index.html.erb
@@ -21,7 +21,7 @@
         <div class="d-block d-md-flex justify-content-between">
           <div class="w-50">
             <h1 class="m-0">MARKTÜBERBLICK</h1>
-            <p class="font-size-14 color-primary mt-0">(1-50 VON 1422107 FAHRZEUGEN)</p>
+            <p class="font-size-14 color-primary mt-0">(0-0 VON 0 FAHRZEUGEN)</p>
           </div>
           <div class="text-end d-flex ms-5 mt-3 me-5">
             <a href="#" class="link-reset mx-3">
@@ -117,9 +117,9 @@
                       <div class="mt-2 mb-1">
                         <label>Getriebe </label>
                         <select class="form-select" aria-label="Default select example">
-                          <option value="" selected="selected">Getriebe auswahlen</option>
-                          <option value="">Getriebe auswahlen</option>
-                          <option value="">Getriebe auswahlen</option>
+                          <option value="" selected="selected">Getriebe auswählen</option>
+                          <option value="">Getriebe auswählen</option>
+                          <option value="">Getriebe auswählen</option>
                         </select>
                       </div>
                       <div class="mt-2 mb-1">
@@ -127,8 +127,8 @@
                         <select class="form-select" aria-label="Default select example">
                           <option value="" selected="selected">Kraftstoffart auswahlen
                           </option>
-                          <option value="">Kraftstoffart auswahlen</option>
-                          <option value="">Kraftstoffart auswahlen</option>
+                          <option value="">Kraftstoffart auswählen</option>
+                          <option value="">Kraftstoffart auswählen</option>
                         </select>
                       </div>
                       <div class="mt-2 mb-1">
