Further improve app

--- a/app/views/bearbeiten/edit.html.erb
+++ b/app/views/bearbeiten/edit.html.erb
@@ -77,7 +77,7 @@
                                 <li><label>Getriebe:</label><span
                                   id="dbGearType"><%= @car.transmission %></span></li>
                                 <li class="hideIfNew"><label>Erstzulassung:</label><span
-                                  id="dbFirstRegistrationDate">-</span>
+                                  id="dbFirstRegistrationDate"><%= @car.first_registration&.strftime("%d.%m.%Y") %></span>
                                 </li>
                                 <li><label>Leistung:</label><span
                                   id="dbVehiclePower"><%= @car.bhp %> PS</span></li>
@@ -115,11 +115,17 @@
                           <div class="w-50">
                             <h6 class="font-size-15  color-primary">BILDER</h6>
                             <div class="text-center">
-                              <%= image_tag "car-img.png", alt: "car", class: "border shadow-sm my-3" %>
+                              <% if @car.photo.attached? %>
+                                <%= image_tag @car.photo, style: 'width: 100px' %>
+                              <% else %>
+                                <%= image_tag "car-img.png", alt: "", class: "border shadow-sm my-3" %>
+                              <% end %>
                             </div>
                             <div>
-                              Sie haben noch keine Bilder hinzugefügt. <br>
-                              <a class="changeTab" href="#tab7">Bilder jetzt hinzufügen</a>
+                              <% unless @car.photo.attached? %>
+                                Sie haben noch keine Bilder hinzugefügt. <br>
+                                <a class="changeTab" href="#tab7">Bilder jetzt hinzufügen</a>
+                              <% end %>
                               <br />
                               <div class="fw-bold">PREIS</div>
                               <% if @car.gross_price %>
@@ -136,7 +142,7 @@
                         <div class="dbDescription">
                           <h3>Ausstattung</h3>
                           <div id="dbVehicleDescription" class="vehicleDescription">
-                            <%= @car.option %>
+                            <%= @car.option.gsub("'", "") %>
                           </div>
                         </div>
                         <h3 class="my-3">WIE VOLLSTÄNDIG SIND DIE FAHRZEUGANGABEN?</h3>
@@ -3580,6 +3586,7 @@
                       <div class="col">
                         <div class="card h-100 shadow-sm text-center">
                           <div class="card-body p-0">
+                            <%= form.file_field :photo %>
                             <%= image_tag "car-img.png", class: "img-fluid w-100" %>
                           </div>
                         </div>
