--- a/app/views/kaufvertrag/index.html.erb
+++ b/app/views/kaufvertrag/index.html.erb
@@ -71,15 +71,15 @@
 
                     <table class="table my_table w-100" id= "cars_table">
                       <tr>
-                        <th>Marke, Modell, Modellvariante</th>
                         <th>Interne Nr.</th>
+                        <th>Marke, Modell, Modellvariante</th>
                         <th>Preis</th>
                         <th>Kilometerstand</th>
                       </tr>
                       <% Car.all.each do |car| %>
                         <tr>
-                          <td><%= "#{car.name} #{car.model}" %></td>
                           <td><%= car.id %></td>
+                          <td><%= "#{car.name} #{car.model}" %></td>
                           <td><%= number_to_currency(car.gross_price) %></td>
                           <td><%= car.mileage %></td>
                         </tr>
@@ -399,7 +399,7 @@
                         Modellvariante
                       </label>
                       <input type="text" class="bg-light p-1 w-100 border border-secondary"
-                             value="" placeholder="A8 4.2 quattro Langversion 4 Türen (334 PS/246 kW)" />
+                             value="" placeholder="" />
                     </div>
                     <div class="w-100 mb-3">
                       <label class="d-block">
