Wording and enhancements

--- a/app/views/bearbeiten/edit.html.erb
+++ b/app/views/bearbeiten/edit.html.erb
@@ -209,8 +209,7 @@
                   </div>
                   <div id="tab2" role="tabpanel" aria-labelledby="" class="tab-pane fade px-4 py-5">
                     <div class="accordion">
-                      <button type="button" class="btn btn-primary expand-collasp">Expand/Collapse
-                        All</button>
+                      <button type="button" class="btn btn-primary expand-collasp">Alle ein-/ausklappen</button>
                       <div class="">
                         <div class="">
                           <div class="accordion-box">
@@ -1002,8 +1001,7 @@
                     <!-- accordion Start here  -->
 
                     <div class="accordion">
-                      <button type="button" class="btn btn-primary expand-collasp">Expand/Collapse
-                        All</button>
+                      <button type="button" class="btn btn-primary expand-collasp">Alle ein-/ausklappen</button>
                       <div class="">
                         <div class="">
 
@@ -3419,8 +3417,6 @@
                           <th class="w-25">Notiz</th>
                         </tr>
                         </thead>
-                        <CAPTION>Notizen können nicht geladen werden
-                        </CAPTION>
                         <tbody>
                         <tr>
                           <td align="center" valign="top"> &nbsp;</td>
@@ -3498,8 +3494,6 @@
                                 aria-hidden="true"></i>
                               </td>
                             </tr>
-                            <CAPTION> Fehler beim Laden der Fahrzeughistorie
-                            </CAPTION>
                           </table>
                         </div>
                       </div>
@@ -3523,8 +3517,6 @@
                                 &nbsp;
                               </td>
                             </tr>
-                            <CAPTION> Fehler. Konnte eigene Dokumente nicht laden
-                            </CAPTION>
                           </table>
                         </div>
                         <div>
