--- a/app/views/login/index.html.erb
+++ b/app/views/login/index.html.erb
@@ -29,10 +29,9 @@
         <div class="login-form">
           <%= image_tag "logo-new.png", :class => "mb-4", alt: "logo" %>
           <form class="">
-            <input type="text" placeholder="username" />
-            <input type="password" placeholder="password" />
-            <a id="loginButton" class= "orange-btn w-100 p-3 text-decoration-none" href="/anmeldung">login</a>
-            <p class="message">Not registered? <a href="#">Create an account</a></p>
+            <input type="text" placeholder="E-Mail-Adresse" />
+            <input type="password" placeholder="Passwort" />
+            <a id="loginButton" class= "orange-btn w-100 p-3 text-decoration-none" href="/anmeldung">Anmelden</a>
           </form>
         </div>
       </div>
