--- a/app/views/popup/_carmodelpopup.html.erb
+++ b/app/views/popup/_carmodelpopup.html.erb
@@ -30,13 +30,13 @@
 
           <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/VanUpTo7500.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
-            <p class="fw-bold text-uppercase">Lkkw bis 7,5t</p>
+            <p class="fw-bold text-uppercase">Lkw bis 7,5t</p>
           </div>
 
 
           <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/TruckOver7500.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
-            <p class="fw-bold text-uppercase">lkw uber 7,5t
+            <p class="fw-bold text-uppercase">lkw über 7,5t
             </p>
           </div>
 
@@ -55,7 +55,7 @@
 
           <div class="card-col" data-bs-dismiss="#staticBackdrop" data-bs-toggle="#staticBackdrop">
             <%=link_to image_tag("cars-icon/Trailer_normal.png", alt: "", class: "shadow-sm"), carmodel_popup_two_path,  {:remote => true} %>
-            <p class="fw-bold text-uppercase">anhanger</p>
+            <p class="fw-bold text-uppercase">anhänger</p>
           </div>
 
 
